--- a/Module Library.ipynb
+++ b/Module Library.ipynb
@@ -89,6 +89,20 @@
    },
    "outputs": [],
    "source": [
+    "# Detect common outliers due to self reporting:\n",
+    "## Age\n",
+    "print(sum(df.age > 122))  ## 122: the longest confirmed human lifespan record\n",
+    "print(sum(users.age < 18)) ## can vary, such as eligibility threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Describe Variables in Batch:\n",
     "\n",
     "#describe non-numeric values\n",
@@ -117,6 +131,10 @@
     "## Count values:\n",
     "df['A'].value_counts()\n",
     "# df['A'].value_counts(sort=False)\n",
+    "\n",
+    "## Visualized value counts:\n",
+    "df.gender.value_counts(dropna=False).plot(kind='bar', color='#FD5C64', rot=0)\n",
+    "plt.xlabel('Gender')\n",
     "\n",
     "## Row Slicing:\n",
     "df[101:105]\n",
@@ -211,9 +229,62 @@
     "## standarlization/scaling\n",
     "\n",
     "## replace missing value\n",
+    "df[\"col\"].replace('-unknown-', np.nan, inplace=True)\n",
     "\n",
-    "## transform dtype (to, e.g. 'float', 'int', 'str', 'category')\n",
-    "df[\"col\"].astype(\"category\")"
+    "## transform dtype (to, e.g. 'float', 'int', 'str', 'category') in batch:\n",
+    "categorical_features = [\n",
+    "    'affiliate_channel',\n",
+    "    'affiliate_provider',\n",
+    "    'country_destination'\n",
+    "]\n",
+    "\n",
+    "for categorical_feature in categorical_features:\n",
+    "    df[categorical_feature] = df[categorical_feature].astype('category')\n",
+    "    \n",
+    "## special transformation: datetime\n",
+    "df['date_first_booking'] = pd.to_datetime(df['date_first_booking'])\n",
+    "df['date_first_active'] = pd.to_datetime((df.timestamp_first_active // 1000000), format='%Y%m%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Plotting with Seaborn\n",
+    "\n",
+    "## Bar plot by group (gender in this case; can also do ex post grouping to continuous vars)\n",
+    "women = sum(users['gender'] == 'FEMALE')\n",
+    "men = sum(users['gender'] == 'MALE')\n",
+    "\n",
+    "female_destinations = users.loc[users['gender'] == 'FEMALE', 'country_destination'].value_counts() / women * 100\n",
+    "male_destinations = users.loc[users['gender'] == 'MALE', 'country_destination'].value_counts() / men * 100\n",
+    "\n",
+    "width = 0.4\n",
+    "\n",
+    "male_destinations.plot(kind='bar', width=width, color='#4DD3C9', position=0, label='Male', rot=0)\n",
+    "female_destinations.plot(kind='bar', width=width, color='#FFA35D', position=1, label='Female', rot=0)\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.xlabel('Destination Country')\n",
+    "plt.ylabel('Percentage')\n",
+    "\n",
+    "sns.despine()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "## Histogram with density plot\n",
+    "sns.distplot(users.age.dropna(), color='#FD5C64')\n",
+    "plt.xlabel('Age')\n",
+    "sns.despine()\n",
+    "\n",
+    "## Time series line plot\n",
+    "sns.set_style(\"whitegrid\", {'axes.edgecolor': '0'})\n",
+    "sns.set_context(\"poster\", font_scale=1.1)\n",
+    "users.date_account_created.value_counts().plot(kind='line', linewidth=1.2, color='#FD5C64')"
    ]
   }
  ],
